# artpad

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  yes
.github/workflows/: build_test.yml
include/: BalanceAuto.h  ContrastSimple.h  Flip.h  Layers.h  PuissanceN.h  Rotation.h  Saturation.h  artpad.h  colorimetrie.h  filter.h  flood_fill_stack.h  gui.h  image.h  image_scaling.h  queue.h  rotoscopie.h  stack.h  temp_layer.h  utils.h  video.h
lib/: Makefile
src/: CMakeLists.txt  Makefile  main  main.c  sources.mk  variables.mk
src/balanceauto/: BalanceAuto.c  BalanceAuto.h  Makefile  main.c
src/colorimetrie/: Makefile  colorimetrie  colorimetrie.c  colorimetrie.h  flood_fill_stack.c  launch  main.c  stack.c  stack.h
src/constrastsimple/: ConstastSimple.c  ConstastSimple.h  ContrastSimple.c  ContrastSimple.h  main.c
src/contrastsimple/: ContrastSimple.c  ContrastSimple.h  Makefile  main.c
src/detection/: DetectionCoin.c  DetectionCoin.h  KLT.c  KLT.h  Makefile  main.c  result1  result2  result3
src/flip/: Flip.c  Flip.h  Makefile  main.c
src/gui/: #prototype.glade#  Layers.c  Makefile  basics_gui.c  basics_gui.h  drawing_tools.h  gui  gui.c  gui.d  image_tools.c  image_tools.h  maquette.glade  prototype.glade  prototype2.glade  prototype2.glade~  queue.c  temp_layers.c
src/image/: Makefile  area.c  filter.c  filter.h  image.c  image.h  image_scaling.c  main.c  mask.c
src/image/colorimetrie/: Makefile  colorimetrie  colorimetrie.c  colorimetrie.h  main.c
src/newrotation/: RotationFutur.c  RotationFutur.h  main.c
src/puissancen/: Makefile  PuissanceN.c  PuissanceN.h  Retinex.c  Retinex.h  main.c  result  test
src/rotation/: Makefile  Rotation.c  Rotation.h  main.c
src/rotoscopie/: Makefile  main.c  main_video.c  rotoscopie.c  rotoscopie.h  rotoscopie_video.c
src/saturation/: Makefile  Saturation.c  Saturation.h  result
src/utils/: #utils.c#  queue.c  utils.c  utils.h
src/video/: Makefile  main.c  smooth.c  video.c  video.c~  video.h
test/: CMakeLists.txt  Makefile
test/src/: Makefile  colorimetrie.c  gui.c  image.c  puissanceN.c  rotation.c  rotoscopie.c  rotoscopie_video.c  saturation.c  smooth_video.c  video.c
(+14 files in other folders)
